--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,3 @@
 {
-    "/assets/css/material-kit.css": "/assets/css/material-kit.css"
+    "/assets/css/material-kit.css": "/assets/css/material-kit.css?id=f4a178ceb6cb59e099fb"
 }
